--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "gulp-connect": "^2.2.0",
     "gulp-eslint": "^1.0.0",
     "gulp-open": "^1.0.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.4",
     "jquery": "^2.1.4",
+    "lodash": "^3.10.1",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "reactify": "^1.1.1",
